--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
         <item>Profesor</item>
         <item>Alumno</item>
     </string-array>
+
+    <string-array name="questions">
+        <item>Elige un tipo de pregunta</item>
+        <item>Respuesta abierta</item>
+        <item>Listado (una elección)</item>
+        <item>Listado (múltiple elección)</item>
+        <item>Valoración</item>
+    </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
