--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,21 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="forgotten_password"><u>He olvidado mi contraseña</u></string>
+
     <string-array name="roles">
         <item>Profesor</item>
         <item>Alumno</item>
+    </string-array>
+
+    <string-array name="font_sizes">
+        <item>Pequeña</item>
+        <item>Normal</item>
+        <item>Grande</item>
+    </string-array>
+
+    <string-array name="colors">
+        <item>Claro</item>
+        <item>Oscuro</item>
     </string-array>
 
     <string-array name="questions">
